--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
-NEXT_PUBLIC_API_URL=http://191.101.0.193:5000/
+NEXT_PUBLIC_API_URL=https://pacificoapi.online/
