--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-responsive-carousel": "^3.2.23",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "swr": "^2.1.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
